Bug 297532 - JJ: Advanced color selector does not update the color on other color selectors in real time
Summary: JJ: Advanced color selector does not update the color on other color selector...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: 2.4
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2012-04-05 12:39 UTC by Antoine
Modified: 2017-10-13 22:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antoine 2012-04-05 12:39:42 UTC
The color is updated just on mouse release event for the Advanced color selector. Only its own color preview square updates in realtime.

The specific color selector is a bit laggy, but you never know exactly when it's going to update the color: if you move the sliders fast enough, it does not update at all.

The small color select works in real time. It is not laggy at all, and update the other controllers color in real time.
Comment 1 Sven Langkamp 2012-07-22 16:38:38 UTC
If I remember correctly the delays where introduce after the realtime update cause problems on some system. Not sure if that is still the case. Currently the specific selector has a 50 ms delay and the advanced color selector does updates on button release.
Comment 2 Halla Rempt 2013-09-26 18:44:42 UTC
Sven is right, doing it in real time gives trouble with performance -- but we should make it consistent for all color selectors.
Comment 3 Halla Rempt 2013-09-26 18:45:38 UTC
(We need to check all color selector dockers for this, of course -- but it's a junior job).
Comment 4 Halla Rempt 2014-01-07 12:34:20 UTC
Git commit 43bc079b78d146b2bbb0174158b914dd6a088b97 by Boudewijn Rempt.
Committed on 07/01/2014 at 12:19.
Pushed by rempt into branch 'calligra/2.8'.

Make the specific color selector more responsive

M  +1    -1    krita/plugins/extensions/dockers/specificcolorselector/kis_specific_color_selector_widget.cc

http://commits.kde.org/calligra/43bc079b78d146b2bbb0174158b914dd6a088b97
Comment 5 Halla Rempt 2014-01-07 12:34:20 UTC
Git commit 7f931a25eeadcc6d5caf24d79769439dd1153fab by Boudewijn Rempt.
Committed on 07/01/2014 at 12:33.
Pushed by rempt into branch 'calligra/2.8'.

Synchronize the other color selectors with the advanced color selector

M  +10   -1    krita/plugins/extensions/dockers/advancedcolorselector/kis_color_selector.cpp
M  +1    -0    krita/plugins/extensions/dockers/advancedcolorselector/kis_color_selector.h
M  +4    -4    krita/plugins/extensions/dockers/advancedcolorselector/kis_color_selector_base.cpp

http://commits.kde.org/calligra/7f931a25eeadcc6d5caf24d79769439dd1153fab
Comment 6 Halla Rempt 2014-01-07 12:34:37 UTC
Git commit 95b8fb05c70e51e892fd60c8a395e78d4f5c5e0b by Boudewijn Rempt.
Committed on 07/01/2014 at 12:19.
Pushed by rempt into branch 'master'.

Make the specific color selector more responsive

M  +1    -1    krita/plugins/extensions/dockers/specificcolorselector/kis_specific_color_selector_widget.cc

http://commits.kde.org/calligra/95b8fb05c70e51e892fd60c8a395e78d4f5c5e0b
Comment 7 Halla Rempt 2014-01-07 12:34:39 UTC
Git commit 0dd2ff124b950a82f2a6530687ac705213443091 by Boudewijn Rempt.
Committed on 07/01/2014 at 12:33.
Pushed by rempt into branch 'master'.

Synchronize the other color selectors with the advanced color selector

M  +10   -1    krita/plugins/extensions/dockers/advancedcolorselector/kis_color_selector.cpp
M  +1    -0    krita/plugins/extensions/dockers/advancedcolorselector/kis_color_selector.h
M  +4    -4    krita/plugins/extensions/dockers/advancedcolorselector/kis_color_selector_base.cpp

http://commits.kde.org/calligra/0dd2ff124b950a82f2a6530687ac705213443091