Synchronize the other color selectors with the advanced color selector

BUG:297532